completed Sprint challenge

--- a/about.html
+++ b/about.html
@@ -15,7 +15,10 @@
     <div class="container about-page">
 
       <header class="about navigation">
+
+          <a href="index.html"> 
           <img src="/Users/vanessamclendon/Documents/Projects/Sprint-Challenge--User-Interface/img/lambda-black.png" alt="lambda-black.png">
+          </a> 
           <nav>
               <a href="#">Home</a>
               <a href="#">About</a>
@@ -79,7 +82,7 @@
 
       </section>
 
-      <section clas="about last-part">
+      <section class="about last-part">
          
           <h2>Let's Work Together</h2>
 
