--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
           <img src="/Users/vanessamclendon/Documents/Projects/Sprint-Challenge--User-Interface/img/lambda-black.png" alt="lambda-black.png">
           </a> 
           <nav>
-              <a href="#">Home</a>
+              <a href="index.html">Home</a>
               <a href="#">About</a>
               <a href="#">Products</a>
               <a href="#">Blog</a>
